--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
         fetch("https://ci-swapi.herokuapp.com/api/")
             .then(response => response.json()) 
             .then(data => {
-                document.getElementById("content").innerText = data.people;
-            });
+                document.getElementById("content").innerText = data.tmr;
+            })
+            .catch((e) => {
+                console.error("Error: ", e);
+            })
     </script>
 </body>
 </html>
