--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
 
     <script>
         fetch("https://ci-swapi.herokuapp.com/api/")
-            .then(response => response.json()) 
-            .then(data => {
-                document.getElementById("content").innerText = data.tmr;
-            })
+            .then(response => response.text()) 
+            .then(data => displayData(data))
             .catch((e) => {
                 console.error("Error: ", e);
             })
+
+        function displayData(data) {
+            document.getElementById("content").innerText = data;
+        }
     </script>
 </body>
 </html>
